--- a/Admin-CSNet/views/admin_dashboard.ejs
+++ b/Admin-CSNet/views/admin_dashboard.ejs
@@ -155,7 +155,7 @@
                                             <div class="secondary"></div>
                                         </div>
                                         <div class="tile-body">
-                                            <div class="content">{{hosts.totalH}}</div>
+                                            <div class="content">25</div>
                                         </div>
                                         <div class="tile-footer">
                                             <span class="info-text text-right"></span>
@@ -166,11 +166,11 @@
                                 <div class="col-md-4">
                                     <div class="amazo-tile tile-success" href="#">
                                         <div class="tile-heading">
-                                            <div class="title">Total Users</div>
+                                            <div class="title">Total Clients</div>
                                             <div class="secondary"></div>
                                         </div>
                                         <div class="tile-body">
-                                            <div class="content">{{users.totalUsers}}</div>
+                                            <div class="content">1620</div>
                                         </div>
                                         <div class="tile-footer">
                                             <span class="info-text text-center"></span>
@@ -186,7 +186,7 @@
                                             <div class="secondary"></div>
                                         </div>
                                         <div class="tile-body">
-                                            <div class="content">{{properties.totalProperties}}</div>
+                                            <div class="content">614</div>
                                         </div>
                                         <div class="tile-footer">
                                             <span class="info-text text-center"></span>
@@ -202,7 +202,7 @@
                                             <div class="secondary"></div>
                                         </div>
                                         <div class="tile-body">
-                                            <span class="content">{{bills.totalbill}}</span>
+                                            <span class="content">55</span>
                                         </div>
                                         <div class="tile-footer text-center">
                                             <span class="info-text text-right" style="color: #f04743"><!--<i class="fa fa-level-down"></i>--></span>
@@ -219,7 +219,7 @@
                                             <span class="secondary"></span>
                                         </div>
                                         <div class="tile-body">
-                                            <span class="content">{{revenue.totalRevenue}}</span>
+                                            <span class="content">5239</span>
                                         </div>
                                         <div class="tile-footer">
                                             <span class="info-text text-right" style="color: #94c355"><!-- <i class="fa fa-level-up"></i>--></span>
