--- a/Admin-CSNet/views/admin_login.ejs
+++ b/Admin-CSNet/views/admin_login.ejs
@@ -17,7 +17,7 @@
 <br><br><br>
 
 
-        <img src="images/Airbnb_Logo.png" align="center" height="80" width="280" class="center-block">
+        <img src="images/smart.jpg" align="center" height="80" width="280" class="center-block">
 <br><br>
 <div class="col-md-4"></div>
 <div class="col-md-4">
