--- a/Admin-CSNet/views/admin_dashboard.ejs
+++ b/Admin-CSNet/views/admin_dashboard.ejs
@@ -74,11 +74,11 @@
                         <div class="widget-body welcome-box tabular">
                             <div class="tabular-row">
                                 <div class="tabular-cell welcome-avatar">
-                                    <a href="/admin/dashboard"><img src="images/admin.jpg" class="avatar"></a>
+                                    <a href="/admin_dashboard"><img src="images/admin.jpg" class="avatar"></a>
                                 </div>
                                 <div class="tabular-cell welcome-options">
                                     <span class="welcome-text">Welcome,</span>
-                                    <a href="/admin/dashboard" class="name">Admin</a>
+                                    <a href="/admin_dashboard" class="name">Admin</a>
                                 </div>
                             </div>
                         </div>
