--- a/Admin-CSNet/views/add_cluster.ejs
+++ b/Admin-CSNet/views/add_cluster.ejs
@@ -89,7 +89,7 @@
                                 <li class="nav-separator"></li>
 
 
-                                <li class="active"><a href="/admin_dashboard"><span><i class="fa fa-bar-chart" aria-hidden="true"></i>&nbsp; Dashboard</span></a>
+                                <li><a href="/admin_dashboard"><span><i class="fa fa-bar-chart" aria-hidden="true"></i>&nbsp; Dashboard</span></a>
                                 </li>
                                 <li><a href="/admin_activeUserManagement"><span><i class="fa fa-users" aria-hidden="true"></i>&nbsp; Cluster Management</span></a>
                                 </li>
@@ -111,7 +111,7 @@
                                 <!--class="fa fa-user"></i><span>Admin Management</span></a>-->
                                 <!--<ul class="acc-menu">-->
                                 <li><a href="/viewAddAdminPage"><span><i class="fa fa-asterisk" aria-hidden="true"></i>&nbsp; Add New Cluster</span></a></li>
-                                <li><a href="/viewAddAdminPage"><span><i class="fa fa-circle-thin" aria-hidden="true"></i>&nbsp; Add New Node</span></a></li>
+                                <li  class="active"><a href="/viewAddAdminPage"><span><i class="fa fa-circle-thin" aria-hidden="true"></i>&nbsp; Add New Node</span></a></li>
                                 <li><a href="/viewAddAdminPage"><span><i class="fa fa-credit-card" aria-hidden="true"></i>&nbsp; Add New Service</span></a></li>
                                 <!--</ul>-->
                                 <!--</li>-->
@@ -168,23 +168,23 @@
                     </div>
                     <div class="col-md-4"></div>
 
-            </div>
-            <footer role="contentinfo">
-                <div class="clearfix">
-                    <ul class="list-unstyled list-inline pull-left">
-                        <li><h6 style="margin: 0;"></h6></li>
-                    </ul>
-                    <button class="pull-right btn btn-link btn-xs hidden-print"
-                            id="back-to-top">
-                        <i class="fa fa-arrow-up"></i>
-                    </button>
                 </div>
-            </footer>
+                <footer role="contentinfo">
+                    <div class="clearfix">
+                        <ul class="list-unstyled list-inline pull-left">
+                            <li><h6 style="margin: 0;"></h6></li>
+                        </ul>
+                        <button class="pull-right btn btn-link btn-xs hidden-print"
+                                id="back-to-top">
+                            <i class="fa fa-arrow-up"></i>
+                        </button>
+                    </div>
+                </footer>
+            </div>
         </div>
     </div>
-</div>
-<script src="js/jquery.js"></script>
-<script src="js/yii.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/yii.js"></script>
 </body>
 </html>
 
