--- a/Admin-CSNet/views/admin_dashboard.ejs
+++ b/Admin-CSNet/views/admin_dashboard.ejs
@@ -91,36 +91,31 @@
 
                                 <li class="active"><a href="/admin_dashboard"><span><i class="fa fa-bar-chart" aria-hidden="true"></i>&nbsp; Dashboard</span></a>
                                 </li>
-                                <li><a href="/admin_activeUserManagement"><span><i class="fa fa-users" aria-hidden="true"></i>&nbsp; User Management</span></a>
+                                <li><a href="/admin_activeUserManagement"><span><i class="fa fa-users" aria-hidden="true"></i>&nbsp; Cluster Management</span></a>
                                 </li>
 
                                 <!--<li><a href="javascript:void(0);"><i-->
                                                 <!--class="fa fa-users"></i><span>Host Management</span></a>-->
                                     <!--<ul class="acc-menu">-->
                                         <li>
-                                            <a href="/admin_activeHostManagement"><span><i class="fa fa-user" aria-hidden="true"></i>&nbsp; Active Host Management</span></a>
+                                            <a href="/admin_activeHostManagement"><span><i class="fa fa-user" aria-hidden="true"></i>&nbsp; Node Management</span></a>
                                         </li>
-                                        <li><a href="/admin_pendingHost"><span><i class="fa fa-thumbs-o-up" aria-hidden="true"></i>&nbsp; Pending Host Requests</span></a></li>
-                                    <!--</ul>-->
-                                <!--</li>-->
 
 
                                         <li>
-                                            <a href="/admin_activePropertyManagement"><span><i class="fa fa-bank" aria-hidden="true"></i>&nbsp; Active Property Management</span></a>
-                                        </li>
-                                        <li><a href="/admin_pendingProperty"><span><i class="fa fa-thumbs-o-up" aria-hidden="true"></i>&nbsp; Pending Property Requests</span></a>
-                                        </li>
+                                            <a href="/admin_activePropertyManagement"><span><i class="fa fa-bank" aria-hidden="true"></i>&nbsp; Service Management</span></a>
 
-                                <li><a href="/admin_invoiceManagement"><span><i class="fa fa-file" aria-hidden="true"></i>&nbsp; Invoice management</span></a>
-                                </li>
+                                        </li>
 
                                 <!--<li><a href="javascript:void(0);"><i-->
                                                 <!--class="fa fa-user"></i><span>Admin Management</span></a>-->
                                     <!--<ul class="acc-menu">-->
-                                        <li><a href="/viewAddAdminPage"><span><i class="fa fa-user" aria-hidden="true"></i>&nbsp; Add New Admin</span></a>
-                                        </li>
+                                        <li><a href="/viewAddNodePage"><span><i class="fa fa-asterisk" aria-hidden="true"></i>&nbsp; Add New Cluster</span></a></li>
+                                        <li><a href="/viewAddNodePage"><span><i class="fa fa-circle-thin" aria-hidden="true"></i>&nbsp; Add New Node</span></a></li>
+                                        <li><a href="/viewAddAdminPage"><span><i class="fa fa-credit-card" aria-hidden="true"></i>&nbsp; Add New Service</span></a></li>
                                     <!--</ul>-->
                                 <!--</li>-->
+
 
 
                             </ul>
