--- a/Admin-CSNet/views/admin_dashboard.ejs
+++ b/Admin-CSNet/views/admin_dashboard.ejs
@@ -110,9 +110,9 @@
                                 <!--<li><a href="javascript:void(0);"><i-->
                                                 <!--class="fa fa-user"></i><span>Admin Management</span></a>-->
                                     <!--<ul class="acc-menu">-->
-                                        <li><a href="/viewAddNodePage"><span><i class="fa fa-asterisk" aria-hidden="true"></i>&nbsp; Add New Cluster</span></a></li>
-                                        <li><a href="/viewAddNodePage"><span><i class="fa fa-circle-thin" aria-hidden="true"></i>&nbsp; Add New Node</span></a></li>
-                                        <li><a href="/viewAddAdminPage"><span><i class="fa fa-credit-card" aria-hidden="true"></i>&nbsp; Add New Service</span></a></li>
+                                        <li><a href="/addCluster"><span><i class="fa fa-asterisk" aria-hidden="true"></i>&nbsp; Add New Cluster</span></a></li>
+                                        <li><a href="/addNode"><span><i class="fa fa-circle-thin" aria-hidden="true"></i>&nbsp; Add New Node</span></a></li>
+                                        <li><a href="/addService"><span><i class="fa fa-credit-card" aria-hidden="true"></i>&nbsp; Add New Service</span></a></li>
                                     <!--</ul>-->
                                 <!--</li>-->
 
